--- a/CocoaExport/CocoaExport.csproj
+++ b/CocoaExport/CocoaExport.csproj
@@ -46,6 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vistas\CentrosAcopio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\CentrosAcopio.Designer.cs">
+      <DependentUpon>CentrosAcopio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\ControlLotes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\ControlLotes.Designer.cs">
+      <DependentUpon>ControlLotes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\DestinosExportes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\DestinosExportes.Designer.cs">
+      <DependentUpon>DestinosExportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\Exportacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Exportacion.Designer.cs">
+      <DependentUpon>Exportacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\Inspecciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Inspecciones.Designer.cs">
+      <DependentUpon>Inspecciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,12 +90,33 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vistas\RegistroSocios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\RegistroSocios.Designer.cs">
+      <DependentUpon>RegistroSocios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\RegistroUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vistas\RegistroUsuarios.Designer.cs">
       <DependentUpon>RegistroUsuarios.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\CentrosAcopio.resx">
+      <DependentUpon>CentrosAcopio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ControlLotes.resx">
+      <DependentUpon>ControlLotes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\DestinosExportes.resx">
+      <DependentUpon>DestinosExportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\Exportacion.resx">
+      <DependentUpon>Exportacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\Inspecciones.resx">
+      <DependentUpon>Inspecciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,6 +133,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Vistas\RegistroSocios.resx">
+      <DependentUpon>RegistroSocios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\RegistroUsuarios.resx">
+      <DependentUpon>RegistroUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -124,6 +181,15 @@
       <Project>{2e4d4aaa-40fa-4ef9-86a2-a3710fae96c1}</Project>
       <Name>BLL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1441773161_save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\trash-circle-red-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1443814210_fine_print.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
