--- a/CocoaExport/CocoaExport.csproj
+++ b/CocoaExport/CocoaExport.csproj
@@ -191,6 +191,9 @@
   <ItemGroup>
     <None Include="Resources\1443814210_fine_print.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Login-Manager.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
