--- a/CocoaExport/CocoaExport.csproj
+++ b/CocoaExport/CocoaExport.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -96,6 +97,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vistas\Recepcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Recepcion.Designer.cs">
+      <DependentUpon>Recepcion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\RegistroSocios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +149,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Vistas\Recepcion.resx">
+      <DependentUpon>Recepcion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\RegistroSocios.resx">
       <DependentUpon>RegistroSocios.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,6 +212,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Login-Manager.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo CocoaExport Proyect.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo CocoaExport Proyect1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
