--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ClaseMaestra.cs" />
     <Compile Include="RegistroCertificaciones.cs" />
+    <Compile Include="Inspecciones.cs" />
     <Compile Include="RegistroDeUsuarios.cs" />
     <Compile Include="RegistrosSocios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
