Agregando clase inspecciones

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Lotes.cs" />
     <Compile Include="Recepcion.cs" />
     <Compile Include="Certificaciones.cs" />
+    <Compile Include="Inspeciones.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Socios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
