--- a/CocoaExport/CocoaExport.csproj
+++ b/CocoaExport/CocoaExport.csproj
@@ -77,11 +77,11 @@
     <Compile Include="Vistas\Exportacion.Designer.cs">
       <DependentUpon>Exportacion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Vistas\Inspecciones.cs">
+    <Compile Include="Vistas\InspeccionesRegistro.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Vistas\Inspecciones.Designer.cs">
-      <DependentUpon>Inspecciones.cs</DependentUpon>
+    <Compile Include="Vistas\InspeccionesRegistro.Designer.cs">
+      <DependentUpon>InspeccionesRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Vistas\Login.cs">
       <SubType>Form</SubType>
@@ -130,8 +130,8 @@
     <EmbeddedResource Include="Vistas\Exportacion.resx">
       <DependentUpon>Exportacion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Vistas\Inspecciones.resx">
-      <DependentUpon>Inspecciones.cs</DependentUpon>
+    <EmbeddedResource Include="Vistas\InspeccionesRegistro.resx">
+      <DependentUpon>InspeccionesRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
