--- a/CocoaExport/CocoaExport.csproj
+++ b/CocoaExport/CocoaExport.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Vistas\DestinosExportes.Designer.cs">
       <DependentUpon>DestinosExportes.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConsultaVistas\Listar Socios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultaVistas\Listar Socios.Designer.cs">
+      <DependentUpon>Listar Socios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,11 +85,11 @@
     <Compile Include="Vistas\Recepcion.Designer.cs">
       <DependentUpon>Recepcion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Vistas\RegistroDeInspecciones.cs">
+    <Compile Include="Vistas\InspeccionesRegistro.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Vistas\RegistroDeInspecciones.Designer.cs">
-      <DependentUpon>RegistroDeInspecciones.cs</DependentUpon>
+    <Compile Include="Vistas\InspeccionesRegistro.Designer.cs">
+      <DependentUpon>InspeccionesRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Vistas\RegistroExportacion.cs">
       <SubType>Form</SubType>
@@ -115,6 +121,9 @@
     <EmbeddedResource Include="Vistas\DestinosExportes.resx">
       <DependentUpon>DestinosExportes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ConsultaVistas\Listar Socios.resx">
+      <DependentUpon>Listar Socios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,8 +143,8 @@
     <EmbeddedResource Include="Vistas\Recepcion.resx">
       <DependentUpon>Recepcion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Vistas\RegistroDeInspecciones.resx">
-      <DependentUpon>RegistroDeInspecciones.cs</DependentUpon>
+    <EmbeddedResource Include="Vistas\InspeccionesRegistro.resx">
+      <DependentUpon>InspeccionesRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\RegistroExportacion.resx">
       <DependentUpon>RegistroExportacion.cs</DependentUpon>
